objects/Performance_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>FB_Removed_Behavior_Interest_Targeting__c</fullName>
        <label>Removed Behavior / Interest Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Responded_to_Negative_Feedback_on_Ads__c</fullName>
        <label>Responded to Negative Feedback on Ads</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Updated_Copy_for_Quality__c</fullName>
        <label>Updated Copy for Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Updated_Images_for_Quality__c</fullName>
        <label>Updated Images for Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Updated_Landing_Pages__c</fullName>
        <label>Updated Landing Pages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_First_Page_Ranking_Below_Target__c</fullName>
        <description>WBN Hero Metric Unpaid Search
Keyword Ranking</description>
        <inlineHelpText>Rule: 80% of KWs are ranking on the first page for Google / GEO
Fill Out Unpaid Section and Unpaid Notes</inlineHelpText>
        <label>First Page Ranking Below Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Low_Lead_Range_Paid_Unpaid__c</fullName>
        <description>Prem Services Hero Metric Paid &amp; Unpaid
Low Lead Range (Paid + Unpaid)</description>
        <label>Low Lead Range (Paid + Unpaid)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_PPL_Above_Expected_Goal__c</fullName>
        <description>WBN Hero Metric Paid Search
PPL Above Expected Goal</description>
        <inlineHelpText>Rule: PPL is above the expected goal.
Expected Goal is Network Median PPL
Fill Out Paid Section and Paid Notes</inlineHelpText>
        <label>PPL Above Expected Goal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Projected_to_Miss_Lead_Range_Goal__c</fullName>
        <description>WBN Hero Metric Paid Search
Projected to Miss Lead Range Goal?</description>
        <inlineHelpText>Fill Out Paid Section and Paid Notes</inlineHelpText>
        <label>Projected to Miss Lead Range Goal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Underspending__c</fullName>
        <description>Hero Metric - Please Fill out Paid Section and Paid Notes</description>
        <inlineHelpText>Rule: At least 15 days have passed in the billing period AND the “spent projection” at the end of the billing period is lower than 70% of the budget.
Please Fill out Paid Section and Paid Notes</inlineHelpText>
        <label>Underspending</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Unpaid_Lead_Drop__c</fullName>
        <description>WBN Hero Metric Unpaid Search
Unpaid Lead Drop</description>
        <inlineHelpText>Rule: Unpaid Leads are down by 30% or more over the last 14 days
Fill Out Unpaid Section and Unpaid Notes</inlineHelpText>
        <label>Unpaid Lead Drop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>Proactive or Reactive</description>
        <inlineHelpText>Is this a proactive analysis or reaction(Case)</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Added_Call_only__c</fullName>
        <label>Added Call only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Added_Keywords__c</fullName>
        <label>Added Keywords</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Added_Negatives__c</fullName>
        <label>Added Negatives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Added_Pending_Keywords__c</fullName>
        <label>Added Pending Keywords</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Added_Service_Category__c</fullName>
        <label>Added Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Adjusted_Site_Link_Extensions__c</fullName>
        <label>Adjusted Site Link Extensions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Adjusted_VPL_Caps__c</fullName>
        <label>Adjusted VPL Caps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Algo_Added_Negative_Bid_Multiplier__c</fullName>
        <label>Algo: Added Negative Bid Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Algo_Added_Positive_Bid_Multiplier__c</fullName>
        <label>Algo: Added Positive Bid Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Checked_Lead_Quality__c</fullName>
        <description>Checked Lead Quality</description>
        <label>Checked Lead Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Checked_for_Adwords_Disapprovals__c</fullName>
        <label>Checked for Adwords Disapprovals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Checked_for_Limited_Ad_status_in_Adw__c</fullName>
        <label>Checked for Limited Ad status in Adwords</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Checked_for_Site_Suspensions__c</fullName>
        <label>Checked for Site Suspensions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Cleared_Spend_Blockers__c</fullName>
        <label>Cleared Spend Blockers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Corrected_Ad_Copy_Typos__c</fullName>
        <description>Corrected Ad Copy Typos</description>
        <label>Corrected Ad Copy Typos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Decreased_Geo_Targeting__c</fullName>
        <description>Decreased Geo Targeting</description>
        <label>Decreased Geo Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Deleted_Call_Only__c</fullName>
        <label>Deleted Call Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Deleted_Paused_Keywords__c</fullName>
        <label>Deleted/Paused Keywords</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Deleted_paused_Service_Category__c</fullName>
        <label>Deleted/paused Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Fixed_Call_Tracking_Issues__c</fullName>
        <label>Fixed Call Tracking Issues</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Implemented_Business_Hour_Only_Bidding__c</fullName>
        <label>Implemented Business Hour Only Bidding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Implemented_No_Listing_Left_Behind__c</fullName>
        <label>Implemented No Listing Left Behind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Increased_Geo_Targeting__c</fullName>
        <label>Increased Geo Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Paused_Provider_Outlets__c</fullName>
        <description>Paused Provider Outlets</description>
        <label>Paused Provider Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Paused_Spend_Monitoring__c</fullName>
        <description>Paused Spend Monitoring</description>
        <label>Paused Spend Monitoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Recommended_Budget_Changes__c</fullName>
        <label>Recommended Budget Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>No_Recmnd_Upsell_Downsell</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Recommended_Conversion_Tactics__c</fullName>
        <label>Recommended Conversion Tactics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Removed_Negatives__c</fullName>
        <label>Removed Negatives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Resolved_KW_Conflicts__c</fullName>
        <description>Resolved KW Conflicts</description>
        <label>Resolved KW Conflicts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Updated_Bulk_URL_Manager__c</fullName>
        <label>Updated Bulk URL Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Updated_Geo_Messaging__c</fullName>
        <label>Updated Geo Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_Updated_Refreshed_Ad_Copy__c</fullName>
        <label>Updated/Refreshed Ad Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Per Click</fullName>
                </value>
                <value>
                    <fullName>SEO</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Relevant Issue &amp; Work Completed</fullName>
                </value>
                <value>
                    <fullName>False Positive - Work Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Added_Schema_Mark_Up__c</fullName>
        <label>Added Schema Mark-Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Checked_Site_Speed__c</fullName>
        <label>Checked Site Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Checked_non_200_ok_or_non_301_codes__c</fullName>
        <label>Checked for non 200 ok or non 301 codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Cleaned_Up_Schema_Mark_up__c</fullName>
        <label>Cleaned Up Schema Mark-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Created_Custom_Content_Case__c</fullName>
        <description>Created Custom Content Case</description>
        <label>Created Custom Content Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Fixed_Broken_Links__c</fullName>
        <label>Fixed Broken Links</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Performed_Code_Clean_up__c</fullName>
        <description>Performed Code Clean-up</description>
        <label>Performed Code Clean-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Published_Site__c</fullName>
        <label>Published Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Recommended_Website_Updates__c</fullName>
        <label>Recommended Website Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Resolved_Crawl_Errors__c</fullName>
        <label>Resolved Crawl Errors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Resolved_Sitemap_Errors__c</fullName>
        <label>Resolved Sitemap Errors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Submitted_to_G_B_Webmaster_Tools__c</fullName>
        <label>Submitted to G&amp;B Webmaster Tools</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Bing_Listing__c</fullName>
        <label>Updated Bing Listing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Bing_Webmaster_Tools__c</fullName>
        <label>Updated Bing Webmaster Tools</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_GMB_Listing__c</fullName>
        <label>Updated GMB Listing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Google_Search_Console__c</fullName>
        <label>Updated Google Search Console</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_H_Tags__c</fullName>
        <label>Updated H Tags</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Images_Title_Alt_Tags__c</fullName>
        <label>Updated Images (Title/Alt Tags)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Meta_Data__c</fullName>
        <label>Updated Meta Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Unpaid_Tracking__c</fullName>
        <label>Updated Unpaid Tracking #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Updated_Yext__c</fullName>
        <label>Updated Yext</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Vendor_Built_Additional_Citations__c</fullName>
        <label>Vendor: Built Additional Citations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Vendor_Built_Backlinks__c</fullName>
        <label>Vendor: Built Backlinks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Vendor_Cleaned_Up_Citations__c</fullName>
        <label>Vendor: Cleaned Up Citations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Vendor_Produced_Enhanced_Content__c</fullName>
        <label>Vendor: Produced / Enhanced Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Vendor_Reclaimed_Backlinks__c</fullName>
        <label>Vendor Reclaimed Backlinks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <label>Performance Analysis</label>
    <listViews>
        <fullName>AccountPerformanceQueue295311_Performance_Analysis</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Account Performance Queue</label>
        <queue>AccountPerformanceQueue295311</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Performance_New</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Franchise</value>
        </filters>
        <label>Account Performance - New</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Performance_Open</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Franchise</value>
        </filters>
        <label>Account Performance - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Channel__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Report_Issue_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NationalCharlotte_Performance_Analysis</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>National Performance Queue</label>
        <queue>NationalCharlotte</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>National_Performance_New</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Franchise</value>
        </filters>
        <label>National Performance - New</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>National_Performance_Open</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>HC_Underspending__c</columns>
        <columns>HC_PPL_Above_Expected_Goal__c</columns>
        <columns>HC_First_Page_Ranking_Below_Target__c</columns>
        <columns>HC_Unpaid_Lead_Drop__c</columns>
        <columns>Next_Billing_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Franchise</value>
        </filters>
        <label>National Performance - Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Performance_NCS_QA_Performance_Analysis</fullName>
        <filterScope>Queue</filterScope>
        <label>Performance NCS QA</label>
        <queue>Performance_NCS_QA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Performance Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Analyses</pluralLabel>
    <recordTypes>
        <fullName>Auto_Performance_Insights</fullName>
        <active>true</active>
        <description>default record type for proactive analysis</description>
        <label>Auto Performance Insights</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Notes_Required</fullName>
        <active>false</active>
        <description>Add Notes before closing. This was deactivated and notes for each section are now required.</description>
        <errorConditionFormula>And(
RecordType.DeveloperName="Auto_Performance_Insights",
/*RecordTypeId="0122a0000008TlS", Performance*/
ISPICKVAL(Status__c, "Relevant Issue &amp; Work Completed"),
LEN(Notes__c)&lt;10)</errorConditionFormula>
        <errorDisplayField>Notes__c</errorDisplayField>
        <errorMessage>Please add Notes before Closing this Issue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>False_Positive_Notes_Required</fullName>
        <active>true</active>
        <description>If there is a False Positive Status than False Positive Notes are required.</description>
        <errorConditionFormula>And(
RecordType.DeveloperName="Auto_Performance_Insights", 
/*RecordTypeId="0122a0000008TlS", Performance*/ 
ISPICKVAL(Status__c, "False Positive - Work Not Completed"),
LEN(False_Positive_Notes__c)&lt;10)</errorConditionFormula>
        <errorDisplayField>False_Positive_Notes__c</errorDisplayField>
        <errorMessage>This had a status of False Positive, False Positive Notes are required.</errorMessage>
    </validationRules>
</CustomObject>